src/main/java/xmlcompiler/generated/XmlExprParser.java
// Generated from /home/ksan/IdeaProjects/xml-lang/src/main/antlr4/XmlExpr.g4 by ANTLR 4.8
package xmlcompiler.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XmlExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ASSIGN=2, NODE=3, ATTRIBUTE=4, OPAR=5, CPAR=6, OANGLEBR=7, CANGLEBR=8, 
		OBRACKET=9, CBRACKET=10, PLUS=11, PUSH=12, PULL=13, NEGATION=14, CONTAIN=15, 
		EQ=16, NEQ=17, IS=18, IN=19, PRINT=20, IF=21, ELSE=22, WHILE=23, FOREACH=24, 
		MAIN=25, FUNCTION=26, RETURN=27, ID=28, STRING=29, COMMENT=30, SPACES=31;
	public static final int
		RULE_parse = 0, RULE_create = 1, RULE_create_node = 2, RULE_create_attribute = 3, 
		RULE_name_object_node = 4, RULE_name_object_attribute = 5, RULE_connect = 6, 
		RULE_main = 7, RULE_start = 8, RULE_instruction = 9, RULE_push_in_node = 10, 
		RULE_pull_from_node = 11, RULE_push_more = 12, RULE_pull_more = 13, RULE_if_stat = 14, 
		RULE_condition_block = 15, RULE_stat_block = 16, RULE_condition = 17, 
		RULE_while_stat = 18, RULE_foreach_stat = 19, RULE_condition_for_each = 20, 
		RULE_print = 21, RULE_print_expr = 22, RULE_function_call = 23, RULE_param_call = 24, 
		RULE_arg_call = 25, RULE_function = 26, RULE_stat_block_with_return = 27, 
		RULE_return_id = 28, RULE_param = 29, RULE_arg = 30, RULE_type = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "create", "create_node", "create_attribute", "name_object_node", 
			"name_object_attribute", "connect", "main", "start", "instruction", "push_in_node", 
			"pull_from_node", "push_more", "pull_more", "if_stat", "condition_block", 
			"stat_block", "condition", "while_stat", "foreach_stat", "condition_for_each", 
			"print", "print_expr", "function_call", "param_call", "arg_call", "function", 
			"stat_block_with_return", "return_id", "param", "arg", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'='", "'node'", "'attribute'", "'('", "')'", "'<'", "'>'", 
			"'{'", "'}'", "'+'", "'<-'", "'->'", "'!'", "'<?>'", "'=='", "'!='", 
			"'is'", "'in'", "'print'", "'if'", "'else'", "'while'", "'forEach'", 
			"'main'", "'fun'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ASSIGN", "NODE", "ATTRIBUTE", "OPAR", "CPAR", "OANGLEBR", 
			"CANGLEBR", "OBRACKET", "CBRACKET", "PLUS", "PUSH", "PULL", "NEGATION", 
			"CONTAIN", "EQ", "NEQ", "IS", "IN", "PRINT", "IF", "ELSE", "WHILE", "FOREACH", 
			"MAIN", "FUNCTION", "RETURN", "ID", "STRING", "COMMENT", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XmlExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XmlExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(XmlExprParser.EOF, 0); }
		public List<CreateContext> create() {
			return getRuleContexts(CreateContext.class);
		}
		public CreateContext create(int i) {
			return getRuleContext(CreateContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NODE) | (1L << ATTRIBUTE) | (1L << ID))) != 0)) {
				{
				{
				setState(64);
				create();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			main();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(71);
				function();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateContext extends ParserRuleContext {
		public Create_nodeContext create_node() {
			return getRuleContext(Create_nodeContext.class,0);
		}
		public Create_attributeContext create_attribute() {
			return getRuleContext(Create_attributeContext.class,0);
		}
		public CreateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterCreate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitCreate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitCreate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateContext create() throws RecognitionException {
		CreateContext _localctx = new CreateContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_create);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				create_node();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				create_attribute();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_nodeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(XmlExprParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(XmlExprParser.ASSIGN, 0); }
		public Name_object_nodeContext name_object_node() {
			return getRuleContext(Name_object_nodeContext.class,0);
		}
		public TerminalNode NODE() { return getToken(XmlExprParser.NODE, 0); }
		public Create_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterCreate_node(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitCreate_node(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitCreate_node(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_nodeContext create_node() throws RecognitionException {
		Create_nodeContext _localctx = new Create_nodeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_create_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NODE) {
				{
				setState(83);
				match(NODE);
				}
			}

			setState(86);
			match(ID);
			setState(87);
			match(ASSIGN);
			setState(88);
			name_object_node();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_attributeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(XmlExprParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(XmlExprParser.ASSIGN, 0); }
		public Name_object_attributeContext name_object_attribute() {
			return getRuleContext(Name_object_attributeContext.class,0);
		}
		public TerminalNode ATTRIBUTE() { return getToken(XmlExprParser.ATTRIBUTE, 0); }
		public Create_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterCreate_attribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitCreate_attribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitCreate_attribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_attributeContext create_attribute() throws RecognitionException {
		Create_attributeContext _localctx = new Create_attributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_create_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ATTRIBUTE) {
				{
				setState(90);
				match(ATTRIBUTE);
				}
			}

			setState(93);
			match(ID);
			setState(94);
			match(ASSIGN);
			setState(95);
			name_object_attribute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_object_nodeContext extends ParserRuleContext {
		public Name_object_nodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_object_node; }
	 
		public Name_object_nodeContext() { }
		public void copyFrom(Name_object_nodeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NameObjectNodeContext extends Name_object_nodeContext {
		public TerminalNode STRING() { return getToken(XmlExprParser.STRING, 0); }
		public NameObjectNodeContext(Name_object_nodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterNameObjectNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitNameObjectNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitNameObjectNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdNodeContext extends Name_object_nodeContext {
		public TerminalNode ID() { return getToken(XmlExprParser.ID, 0); }
		public IdNodeContext(Name_object_nodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterIdNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitIdNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitIdNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionCallNodeContext extends Name_object_nodeContext {
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public FunctionCallNodeContext(Name_object_nodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterFunctionCallNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitFunctionCallNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitFunctionCallNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Name_object_nodeContext name_object_node() throws RecognitionException {
		Name_object_nodeContext _localctx = new Name_object_nodeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name_object_node);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new NameObjectNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(STRING);
				}
				break;
			case 2:
				_localctx = new FunctionCallNodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				function_call();
				}
				break;
			case 3:
				_localctx = new IdNodeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_object_attributeContext extends ParserRuleContext {
		public Name_object_attributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_object_attribute; }
	 
		public Name_object_attributeContext() { }
		public void copyFrom(Name_object_attributeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NameObjectAttributeContext extends Name_object_attributeContext {
		public ConnectContext connect() {
			return getRuleContext(ConnectContext.class,0);
		}
		public NameObjectAttributeContext(Name_object_attributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterNameObjectAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitNameObjectAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitNameObjectAttribute(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionCallAttributeContext extends Name_object_attributeContext {
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public FunctionCallAttributeContext(Name_object_attributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterFunctionCallAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitFunctionCallAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitFunctionCallAttribute(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdAttributeContext extends Name_object_attributeContext {
		public TerminalNode ID() { return getToken(XmlExprParser.ID, 0); }
		public IdAttributeContext(Name_object_attributeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterIdAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitIdAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitIdAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Name_object_attributeContext name_object_attribute() throws RecognitionException {
		Name_object_attributeContext _localctx = new Name_object_attributeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_name_object_attribute);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new NameObjectAttributeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				connect();
				}
				break;
			case 2:
				_localctx = new FunctionCallAttributeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				function_call();
				}
				break;
			case 3:
				_localctx = new IdAttributeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConnectContext extends ParserRuleContext {
		public Token name;
		public Token value;
		public TerminalNode OANGLEBR() { return getToken(XmlExprParser.OANGLEBR, 0); }
		public TerminalNode CANGLEBR() { return getToken(XmlExprParser.CANGLEBR, 0); }
		public List<TerminalNode> STRING() { return getTokens(XmlExprParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(XmlExprParser.STRING, i);
		}
		public ConnectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterConnect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitConnect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitConnect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConnectContext connect() throws RecognitionException {
		ConnectContext _localctx = new ConnectContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_connect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(OANGLEBR);
			setState(108);
			((ConnectContext)_localctx).name = match(STRING);
			setState(109);
			match(T__0);
			setState(110);
			((ConnectContext)_localctx).value = match(STRING);
			setState(111);
			match(CANGLEBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(XmlExprParser.MAIN, 0); }
		public TerminalNode OBRACKET() { return getToken(XmlExprParser.OBRACKET, 0); }
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public TerminalNode CBRACKET() { return getToken(XmlExprParser.CBRACKET, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(MAIN);
			setState(114);
			match(OBRACKET);
			setState(115);
			start();
			setState(116);
			match(CBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NODE) | (1L << ATTRIBUTE) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << ID))) != 0)) {
				{
				{
				setState(118);
				instruction();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public CreateContext create() {
			return getRuleContext(CreateContext.class,0);
		}
		public Push_in_nodeContext push_in_node() {
			return getRuleContext(Push_in_nodeContext.class,0);
		}
		public Pull_from_nodeContext pull_from_node() {
			return getRuleContext(Pull_from_nodeContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public If_statContext if_stat() {
			return getRuleContext(If_statContext.class,0);
		}
		public While_statContext while_stat() {
			return getRuleContext(While_statContext.class,0);
		}
		public Foreach_statContext foreach_stat() {
			return getRuleContext(Foreach_statContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XmlExprListener ) ((XmlExprListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XmlExprVisitor ) return ((XmlExprVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_instruction);
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				create();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				push_in_node();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				pull_from_node();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				print();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(128);
				if_stat();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(129);
				while_stat();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(130);
				foreach_stat();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(131);
				function_call();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
